Updated error handling wiht wrap Async, updated form-validations

--- a/views/campground/edit.ejs
+++ b/views/campground/edit.ejs
@@ -1,29 +1,32 @@
 <% layout('layouts/boilerplate') -%>
 <h1 class="text-center">Edit Campground</h1>
 <div class="col-md-6 offset-3">
-    <form class="d-inline" action="/campgrounds/<%=campground._id%>?_method=PUT" method="POST">
+    <form class="d-inline validation-needed" action="/campgrounds/<%=campground._id%>?_method=PUT" method="POST"
+        novalidate>
         <div class="mt-3">
             <label class="label" for="title">Enter Title: </label>
-            <input class="form-control" value="<%=campground.title%>" type="text" id="title" name="campground[title]">
+            <input class="form-control" value="<%=campground.title%>" type="text" id="title" name="campground[title]"
+                required>
         </div>
         <div class="mt-3">
             <label class="label" for="location">Enter Location: </label>
             <input class="form-control" value="<%=campground.location%>" type="text" id="location"
-                name="campground[location]">
+                name="campground[location]" required>
         </div>
         <div class="mt-3">
             <label class="label" for="image">Enter image url: </label>
-            <input class="form-control" value="<%=campground.image%>" type="text" id="image" name="campground[image]">
+            <input class="form-control" value="<%=campground.image%>" type="text" id="image" name="campground[image]"
+                required>
         </div>
         <div class="mt-3 input-group mb-3">
             <span class="input-group-text">$</span>
             <input type="text" class="form-control" value="<%=campground.price%>" name="campground[price]"
-                placeholder="0.00" aria-label="Amount (to the nearest dollar)">
+                placeholder="0.00" aria-label="Amount (to the nearest dollar)" required>
         </div>
         <div class="input-group">
             <span class="input-group-text">Description</span>
-            <textarea class="form-control" name="campground[description]"
-                aria-label="With textarea"><%=campground.description%></textarea>
+            <textarea class="form-control" name="campground[description]" aria-label="With textarea"
+                required><%=campground.description%></textarea>
         </div>
         <button class="btn btn-success mt-3">Save</button>
     </form>
