--- a/views/campground/new.ejs
+++ b/views/campground/new.ejs
@@ -1,27 +1,28 @@
 <% layout('layouts/boilerplate') -%>
 <h1 class="text-center">New Campground</h1>
 <div class="col-md-6 offset-3">
-    <form action="/campgrounds" method="POST">
+    <form action="/campgrounds" method="POST" class="validation-needed" novalidate>
         <div class="mt-3">
             <label class="label" for="title">Enter Title: </label>
-            <input class="form-control" type="text" id="title" name="campground[title]">
+            <input class="form-control" type="text" id="title" name="campground[title]" required>
         </div>
         <div class="mt-3">
             <label class="label" for="location">Enter Location: </label>
-            <input class="form-control" type="text" id="location" name="campground[location]">
+            <input class="form-control" type="text" id="location" name="campground[location]" required>
         </div>
         <div class="mt-3">
             <label class="label" for="image">Enter image url: </label>
-            <input class="form-control" type="text" id="image" name="campground[image]">
+            <input class="form-control" type="text" id="image" name="campground[image]" required>
         </div>
         <div class="mt-3 input-group mb-3">
             <span class="input-group-text">$</span>
             <input type="text" class="form-control" name="campground[price]" placeholder="0.00"
-                aria-label="Amount (to the nearest dollar)">
+                aria-label="Amount (to the nearest dollar)" required>
         </div>
         <div class="input-group">
             <span class="input-group-text">Description</span>
-            <textarea class="form-control" name="campground[description]" aria-label="With textarea"></textarea>
+            <textarea class="form-control" name="campground[description]" aria-label="With textarea"
+                required></textarea>
         </div>
         <button class="btn btn-success mt-3">Submit</button>
     </form>
