--- a/views/campground/show.ejs
+++ b/views/campground/show.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate') -%>
 
 <div class="row">
-    <div class="col-6 offset-3">
+    <div class="col-6">
         <div class="card my-3">
             <img src="<%= campground.image %>" class="card-img-top" alt="...">
             <div class="card-body">
@@ -22,5 +22,33 @@
                 2 days ago
             </div>
         </div>
+
+    </div>
+    <div class="col-6 mt-3">
+        <h2>Leave a review</h2>
+        <form action="/campgrounds/<%= campground._id %>/reviews" method="POST" class="mb-3 validation-needed"
+            novalidate>
+            <div class="mb-3">
+                <label for="rating" class="form-label">Rating</label>
+                <input class="form-range" id="rating" type="range" name="review[rating]" min="1" max="5" value="3">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="review">Review</label>
+                <textarea class="form-control" name="review[body]" id="review" cols="30" rows="3" required></textarea>
+            </div>
+            <button class="btn btn-success">Submit</button>
+        </form>
+        <% for(let review of campground.reviews) { %>
+        <div class="card">
+            <div class="mb-3 card-body">
+                <h5 class="card-title">Rating: <%= review.rating %></h5>
+                <p class="card-text">Review: <%= review.body %></p>
+                <form class="d-inline" action="/campgrounds/<%=campground._id%>/reviews/<%=review._id%>?_method=DELETE"
+                    method="POST">
+                    <button class="card-link btn btn-danger">Delete</button>
+                </form>
+            </div>
+        </div>
+        <% } %>
     </div>
 </div>
