--- a/views/error.ejs
+++ b/views/error.ejs
@@ -2,8 +2,8 @@
 <div class="row mt-4">
     <div class="col-6 offset-3">
         <div class="alert alert-danger" role="alert">
-            <h4 class="alert-heading"><%= err.message %> </h4>
-            <p><%= err.stack %> </p>
+            <h4 class="alert-heading"><%= err.message %> - <%= err.statusCode %> </h4>
+            <p><%= err.stack %></p>
         </div>
     </div>
 </div>
