--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -11,6 +11,13 @@
                 <a class="nav-link" href="/campgrounds">Campgrounds</a>
                 <a class="nav-link" href="/campgrounds/new">New Campground</a>
             </div>
+            <div class="navbar-nav ms-auto">
+                <% if(!currentUser) {%>
+                <a href="/login" class="nav-link">Login</a>
+                <% } else { %>
+                <a href="/logout" class="nav-link">Logout</a>
+                <% } %>
+            </div>
         </div>
     </div>
 </nav>
