--- a/views/campground/show.ejs
+++ b/views/campground/show.ejs
@@ -10,14 +10,17 @@
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item text-muted">&#x1f4cc; <%= campground.location %></li>
+                <li class="list-group-item">Camp Uploaded by <%= campground.uploader.username %></li>
                 <li class="list-group-item"><%= campground.price %>/Night</li>
             </ul>
+            <% if(currentUser && campground.uploader.equals(currentUser._id)) {%>
             <div class="card-body">
                 <a class="card-link btn btn-info" href="/campgrounds/<%=campground._id%>/edit">Edit</a>
                 <form class="d-inline" action="/campgrounds/<%=campground._id%>?_method=DELETE" method="POST">
                     <button class="card-link btn btn-danger">Delete</button>
                 </form>
             </div>
+            <% } %>
             <div class="card-footer text-muted">
                 2 days ago
             </div>
@@ -25,6 +28,7 @@
 
     </div>
     <div class="col-6 mt-3">
+        <% if(currentUser) { %>
         <h2>Leave a review</h2>
         <form action="/campgrounds/<%= campground._id %>/reviews" method="POST" class="mb-3 validation-needed"
             novalidate>
@@ -38,15 +42,19 @@
             </div>
             <button class="btn btn-success">Submit</button>
         </form>
+        <% } %>
         <% for(let review of campground.reviews) { %>
         <div class="card">
             <div class="mb-3 card-body">
                 <h5 class="card-title">Rating: <%= review.rating %></h5>
+                <h6 class="card-subtitle mb-2 text-muted"><%= review.uploader.username %> </h6>
                 <p class="card-text">Review: <%= review.body %></p>
+                <% if(currentUser && review.uploader.equals(currentUser._id)) {%>
                 <form class="d-inline" action="/campgrounds/<%=campground._id%>/reviews/<%=review._id%>?_method=DELETE"
                     method="POST">
                     <button class="card-link btn btn-danger">Delete</button>
                 </form>
+                <% } %>
             </div>
         </div>
         <% } %>
