--- a/views/campground/show.ejs
+++ b/views/campground/show.ejs
@@ -1,4 +1,5 @@
 <% layout('layouts/boilerplate') -%>
+<link rel="stylesheet" href="/stylesheets/star.css">
 
 <div class="row">
     <div class="col-6">
@@ -32,13 +33,27 @@
         <h2>Leave a review</h2>
         <form action="/campgrounds/<%= campground._id %>/reviews" method="POST" class="mb-3 validation-needed"
             novalidate>
-            <div class="mb-3">
-                <label for="rating" class="form-label">Rating</label>
-                <input class="form-range" id="rating" type="range" name="review[rating]" min="1" max="5" value="3">
+            <div class="mb-0">
+                <label for="rating" class="form-label"><b>Rating:</b></label>
+                <fieldset class="starability-coinFlip">
+                    <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked
+                        aria-label="No rating." />
+                    <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+                    <label for="first-rate1" title="Terrible">1 star</label>
+                    <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+                    <label for="first-rate2" title="Not good">2 stars</label>
+                    <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+                    <label for="first-rate3" title="Average">3 stars</label>
+                    <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+                    <label for="first-rate4" title="Very good">4 stars</label>
+                    <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+                    <label for="first-rate5" title="Amazing">5 stars</label>
+                </fieldset>
             </div>
-            <div class="mb-3">
-                <label class="form-label" for="review">Review</label>
-                <textarea class="form-control" name="review[body]" id="review" cols="30" rows="3" required></textarea>
+            <div class="mb-1">
+                <label class="form-label" for="review"><b>Review</b></label>
+                <textarea class="form-control mb-2" name="review[body]" id="review" cols="30" rows="3"
+                    required></textarea>
             </div>
             <button class="btn btn-success">Submit</button>
         </form>
@@ -46,9 +61,13 @@
         <% for(let review of campground.reviews) { %>
         <div class="card">
             <div class="mb-3 card-body">
-                <h5 class="card-title">Rating: <%= review.rating %></h5>
-                <h6 class="card-subtitle mb-2 text-muted"><%= review.uploader.username %> </h6>
-                <p class="card-text">Review: <%= review.body %></p>
+                <h5 class="card-subtitle mb-2"><%= review.uploader.username %></h5>
+                <h5 class="card-title">
+                    <p class="starability-result" data-rating="<%= review.rating %>">
+                        <%= review.rating %>
+                    </p>
+                </h5>
+                <p class="card-text"><b>Review</b> <%= review.body %></p>
                 <% if(currentUser && review.uploader.equals(currentUser._id)) {%>
                 <form class="d-inline" action="/campgrounds/<%=campground._id%>/reviews/<%=review._id%>?_method=DELETE"
                     method="POST">
