--- a/views/campground/edit.ejs
+++ b/views/campground/edit.ejs
@@ -2,7 +2,7 @@
 <h1 class="text-center">Edit Campground</h1>
 <div class="col-md-6 offset-3">
     <form class="d-inline validation-needed" action="/campgrounds/<%=campground._id%>?_method=PUT" method="POST"
-        novalidate>
+        novalidate enctype="multipart/form-data">
         <div class="mt-3">
             <label class="label" for="title">Enter Title: </label>
             <input class="form-control" value="<%=campground.title%>" type="text" id="title" name="campground[title]"
@@ -14,9 +14,8 @@
                 name="campground[location]" required>
         </div>
         <div class="mt-3">
-            <label class="label" for="image">Enter image url: </label>
-            <input class="form-control" value="<%=campground.image%>" type="text" id="image" name="campground[image]"
-                required>
+            <label for="image" class="form-label">Upload more image(s)...</label>
+            <input class="form-control" type="file" name="image" id="image" multiple>
         </div>
         <div class="mt-3 input-group mb-3">
             <span class="input-group-text">$</span>
@@ -27,6 +26,15 @@
             <span class="input-group-text">Description</span>
             <textarea class="form-control" name="campground[description]" aria-label="With textarea"
                 required><%=campground.description%></textarea>
+        </div>
+        <div class="mt-3">
+            <% campground.images.forEach((img, i) => { %>
+            <img src="<%= img.thumbnail %>" class="img-thumbnail" alt="...">
+            <div class="form-check-inline">
+                <input type="checkbox" name="deleteimgs[]" id="image-<%= i %>" value="<%= img.filename %>">
+            </div>
+            <label for="image-<%= i %>">Delete?</label>
+            <% }) %>
         </div>
         <button class="btn btn-success mt-3">Save</button>
     </form>
