--- a/views/campground/new.ejs
+++ b/views/campground/new.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate') -%>
 <h1 class="text-center">New Campground</h1>
 <div class="col-md-6 offset-3">
-    <form action="/campgrounds" method="POST" class="validation-needed" novalidate>
+    <form action="/campgrounds" method="POST" class="validation-needed" enctype="multipart/form-data" novalidate>
         <div class="mt-3">
             <label class="label" for="title">Enter Title: </label>
             <input class="form-control" type="text" id="title" name="campground[title]" required>
@@ -10,9 +10,13 @@
             <label class="label" for="location">Enter Location: </label>
             <input class="form-control" type="text" id="location" name="campground[location]" required>
         </div>
-        <div class="mt-3">
+        <!-- <div class="mt-3">
             <label class="label" for="image">Enter image url: </label>
             <input class="form-control" type="text" id="image" name="campground[image]" required>
+        </div> -->
+        <div class="mt-3">
+            <label for="image" class="form-label">Upload image(s)...</label>
+            <input class="form-control" type="file" name="image" id="image" multiple>
         </div>
         <div class="mt-3 input-group mb-3">
             <span class="input-group-text">$</span>
