Added map view for camps using GeoCoding MapBox

--- a/views/campground/show.ejs
+++ b/views/campground/show.ejs
@@ -49,8 +49,9 @@
 
     </div>
     <div class="col-6 mt-3">
+      <div id='map' style='width: 500px; height: 300px;'></div>
         <% if(currentUser) { %>
-        <h2>Leave a review</h2>
+        <h2 class="mt-3">Leave a review</h2>
         <form action="/campgrounds/<%= campground._id %>/reviews" method="POST" class="mb-3 validation-needed"
             novalidate>
             <div class="mb-0">
@@ -99,3 +100,10 @@
         <% } %>
     </div>
 </div>
+
+<script>
+    const accessToken = '<%- process.env.MAPBOX_TOKEN %>';
+    const campground = <%- JSON.stringify(campground) %>
+</script>
+
+<script src="/javascripts/showPageMap.js"></script>
