--- a/views/campground/edit.ejs
+++ b/views/campground/edit.ejs
@@ -1,42 +1,45 @@
 <% layout('layouts/boilerplate') -%>
-<h1 class="text-center">Edit Campground</h1>
-<div class="col-md-6 offset-3">
-    <form class="d-inline validation-needed" action="/campgrounds/<%=campground._id%>?_method=PUT" method="POST"
-        novalidate enctype="multipart/form-data">
-        <div class="mt-3">
-            <label class="label" for="title">Enter Title: </label>
-            <input class="form-control" value="<%=campground.title%>" type="text" id="title" name="campground[title]"
-                required>
-        </div>
-        <div class="mt-3">
-            <label class="label" for="location">Enter Location: </label>
-            <input class="form-control" value="<%=campground.location%>" type="text" id="location"
-                name="campground[location]" required>
-        </div>
-        <div class="mt-3">
-            <label for="image" class="form-label">Upload more image(s)...</label>
-            <input class="form-control" type="file" name="image" id="image" multiple>
-        </div>
-        <div class="mt-3 input-group mb-3">
-            <span class="input-group-text">$</span>
-            <input type="text" class="form-control" value="<%=campground.price%>" name="campground[price]"
-                placeholder="0.00" aria-label="Amount (to the nearest dollar)" required>
-        </div>
-        <div class="input-group">
-            <span class="input-group-text">Description</span>
-            <textarea class="form-control" name="campground[description]" aria-label="With textarea"
-                required><%=campground.description%></textarea>
-        </div>
-        <div class="mt-3">
-            <% campground.images.forEach((img, i) => { %>
-            <img src="<%= img.thumbnail %>" class="img-thumbnail" alt="...">
-            <div class="form-check-inline">
-                <input type="checkbox" name="deleteimgs[]" id="image-<%= i %>" value="<%= img.filename %>">
+
+<div class="row mt-4">
+    <h1 class="text-center">Edit Campground</h1>
+    <div class="col-md-6 offset-md-3">
+        <form class="d-inline validation-needed" action="/campgrounds/<%=campground._id%>?_method=PUT" method="POST"
+            novalidate enctype="multipart/form-data">
+            <div class="mt-3">
+                <label class="label" for="title">Enter Title: </label>
+                <input class="form-control" value="<%=campground.title%>" type="text" id="title"
+                    name="campground[title]" required>
             </div>
-            <label for="image-<%= i %>">Delete?</label>
-            <% }) %>
-        </div>
-        <button class="btn btn-success mt-3">Save</button>
-    </form>
-    <a class="btn btn-info mt-3" href="/campgrounds/<%=campground._id%>">Back to camp</a>
+            <div class="mt-3">
+                <label class="label" for="location">Enter Location: </label>
+                <input class="form-control" value="<%=campground.location%>" type="text" id="location"
+                    name="campground[location]" required>
+            </div>
+            <div class="mt-3">
+                <label for="image" class="form-label">Upload more image(s)...</label>
+                <input class="form-control" type="file" name="image" id="image" multiple>
+            </div>
+            <div class="mt-3 input-group mb-3">
+                <span class="input-group-text">$</span>
+                <input type="text" class="form-control" value="<%=campground.price%>" name="campground[price]"
+                    placeholder="0.00" aria-label="Amount (to the nearest dollar)" required>
+            </div>
+            <div class="input-group">
+                <span class="input-group-text">Description</span>
+                <textarea class="form-control" name="campground[description]" aria-label="With textarea"
+                    required><%=campground.description%></textarea>
+            </div>
+            <div class="mt-3">
+                <% campground.images.forEach((img, i) => { %>
+                <img src="<%= img.thumbnail %>" class="img-thumbnail" alt="...">
+                <div class="form-check-inline">
+                    <input type="checkbox" name="deleteimgs[]" id="image-<%= i %>" value="<%= img.filename %>">
+                </div>
+                <label for="image-<%= i %>">Delete?</label>
+                <% }) %>
+            </div>
+            <button class="btn btn-success mt-3">Save</button>
+        </form>
+        <a class="btn btn-info mt-3" href="/campgrounds/<%=campground._id%>">Back to camp</a>
+    </div>
 </div>
