--- a/views/campground/index.ejs
+++ b/views/campground/index.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate') -%>
 <h1>Campgrounds</h1>
-<div id="map" style="height: 500px; width: 100%;"></div>
+<div id="cluster-map"></div>
 <div class="mt-3">
     <ul class="mt-3">
         <% for(let campground of campgrounds) { %>
@@ -34,7 +34,7 @@
 <script>
     const accessToken = '<%- process.env.MAPBOX_TOKEN %>';
     const campgrounds = {
-        features: <%- JSON.stringify(campgrounds) %>
+        features: <%-JSON.stringify(campgrounds) %>
     }
 </script>
 
