--- a/views/campground/new.ejs
+++ b/views/campground/new.ejs
@@ -1,34 +1,49 @@
 <% layout('layouts/boilerplate') -%>
-<h1 class="text-center">New Campground</h1>
-<div class="col-md-6 offset-3">
-    <form action="/campgrounds" method="POST" class="validation-needed" enctype="multipart/form-data" novalidate>
-        <div class="mt-3">
-            <label class="label" for="title">Enter Title: </label>
-            <input class="form-control" type="text" id="title" name="campground[title]" required>
-        </div>
-        <div class="mt-3">
-            <label class="label" for="location">Enter Location: </label>
-            <input class="form-control" type="text" id="location" name="campground[location]" required>
-        </div>
-        <!-- <div class="mt-3">
+
+<div class="row mt-4">
+    <h1 class="text-center">New Campground</h1>
+    <div class="col-md-6 offset-md-3">
+        <form action="/campgrounds" method="POST" class="validation-needed" enctype="multipart/form-data" novalidate>
+            <div class="mt-3">
+                <label class="label" for="title">Enter Title: </label>
+                <input class="form-control" type="text" id="title" name="campground[title]" required>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div>
+            <div class="mt-3">
+                <label class="label" for="location">Enter Location: </label>
+                <input class="form-control" type="text" id="location" name="campground[location]" required>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div>
+            <!-- <div class="mt-3">
             <label class="label" for="image">Enter image url: </label>
             <input class="form-control" type="text" id="image" name="campground[image]" required>
         </div> -->
-        <div class="mt-3">
-            <label for="image" class="form-label">Upload image(s)...</label>
-            <input class="form-control" type="file" name="image" id="image" multiple>
-        </div>
-        <div class="mt-3 input-group mb-3">
-            <span class="input-group-text">$</span>
-            <input type="text" class="form-control" name="campground[price]" placeholder="0.00"
-                aria-label="Amount (to the nearest dollar)" required>
-        </div>
-        <div class="input-group">
-            <span class="input-group-text">Description</span>
-            <textarea class="form-control" name="campground[description]" aria-label="With textarea"
-                required></textarea>
-        </div>
-        <button class="btn btn-success mt-3">Submit</button>
-    </form>
-    <a href="/campgrounds">Back to camps</a>
+            <div class="mt-3">
+                <label for="image" class="form-label">Upload image(s)...</label>
+                <input class="form-control" type="file" name="image" id="image" multiple>
+            </div>
+            <div class="mt-3 input-group mb-3">
+                <span class="input-group-text">$</span>
+                <input type="text" class="form-control" name="campground[price]" placeholder="0.00"
+                    aria-label="Amount (to the nearest dollar)" required>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div>
+            <div class="input-group">
+                <span class="input-group-text">Description</span>
+                <textarea class="form-control" name="campground[description]" aria-label="With textarea"
+                    required></textarea>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div>
+            <button class="btn btn-success mt-3">Submit</button>
+        </form>
+        <a href="/campgrounds">Back to camps</a>
+    </div>
 </div>
