--- a/views/campground/show.ejs
+++ b/views/campground/show.ejs
@@ -49,7 +49,7 @@
 
     </div>
     <div class="col-6 mt-3">
-      <div id='map' style='width: 500px; height: 300px;'></div>
+      <div id='map'></div>
         <% if(currentUser) { %>
         <h2 class="mt-3">Leave a review</h2>
         <form action="/campgrounds/<%= campground._id %>/reviews" method="POST" class="mb-3 validation-needed"
