--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,25 +1,33 @@
 <% layout('layouts/boilerplate') -%>
 
-<h2 class="mt-3">Login</h2>
+<div class="container d-flex justify-content-center align-items-center mt-5">
+    <div class="row">
+        <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
+            <div class="card shadow">
+                <img src="https://images.unsplash.com/photo-1571863533956-01c88e79957e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80"
+                    alt="" class="card-img-top" />
+                <div class="card-body">
+                    <h5 class="card-title">Login</h5>
+                    <form action="/login" method="POST" class="validated-needed" novalidate>
+                        <div class="mb-3">
+                            <label class="form-label" for="username">Username</label>
+                            <input class="form-control" type="text" id="username" name="username" autofocus required>
+                            <div class="valid-feedback">
+                                Looks good!
+                            </div>
+                        </div>
 
-<form action="/login" method="POST" class="validation-needed mt-4" novalidate>
-    <div class="mt-3">
-        <label class="label" for="username">Enter username: </label>
-        <input class="form-control" type="username" id="username" name="username" required>
-        <div class="valid-feedback">
-            Looks good!
+                        <div class="mb-3">
+                            <label class="form-label" for="password">Password</label>
+                            <input class="form-control" type="password" id="password" name="password" required>
+                            <div class="valid-feedback">
+                                Looks good!
+                            </div>
+                        </div>
+                        <button class="btn btn-success btn-block">Login</button>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="mt-3">
-        <label class="label" for="password">Enter password: </label>
-        <input class="form-control" type="password" id="password" name="password" required>
-        <div class="valid-feedback">
-            Looks good!
-        </div>
-    </div>
-    <button class="btn btn-success mt-3">Login</button>
-</form>
-<div class="d-flex">
-    <p class="mt-2">New User? </p>
-    <a href="/register" class="btn btn-info ms-2" style="height: 40px; width: 80px;">Register</a>
 </div>
