--- a/views/campground/edit.ejs
+++ b/views/campground/edit.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate') -%>
 
-<div class="row mt-4">
+<div class="row my-4">
     <h1 class="text-center">Edit Campground</h1>
     <div class="col-md-6 offset-md-3">
         <form class="d-inline validation-needed" action="/campgrounds/<%=campground._id%>?_method=PUT" method="POST"
@@ -38,8 +38,8 @@
                 <label for="image-<%= i %>">Delete?</label>
                 <% }) %>
             </div>
-            <button class="btn btn-success mt-3">Save</button>
+            <button class="btn btn-sm btn-success mt-3">Save</button>
         </form>
-        <a class="btn btn-info mt-3" href="/campgrounds/<%=campground._id%>">Back to camp</a>
+        <a class="btn btn-sm btn-info mt-3" href="/campgrounds/<%=campground._id%>">Back to camp</a>
     </div>
 </div>
