--- a/public/stylesheets/map.css
+++ b/public/stylesheets/map.css
@@ -7,3 +7,29 @@
     width: 100%;
     height: 300px;
 }
+
+@media (max-width: 772px) {
+    #css1 {
+        font-size: 0.7rem;
+    }
+
+    #css2 {
+        font-size: 1.4rem;
+    }
+
+    #css3 {
+        border-bottom: 1px solid grey;
+        padding-bottom: 20px ;
+    }
+
+    #css4 {
+      font-size: 1rem;
+    }
+    #css5 {
+      padding: 0;
+    }
+}
+
+#css2 {
+    font-weight: bold;
+}
