--- a/views/campground/new.ejs
+++ b/views/campground/new.ejs
@@ -42,7 +42,7 @@
                     Looks good!
                 </div>
             </div>
-            <button class="btn btn-success mt-3">Submit</button>
+            <button class="btn btn-sm btn-success mt-3">Submit</button>
         </form>
         <a href="/campgrounds">Back to camps</a>
     </div>
