--- a/views/campground/show.ejs
+++ b/views/campground/show.ejs
@@ -1,105 +1,107 @@
 <% layout('layouts/boilerplate') -%>
 <link rel="stylesheet" href="/stylesheets/star.css">
 
-<div class="row mt-3">
-    <div class="col-6">
-        <div id="campGroundControls" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <% campground.images.forEach((img, i) => { %>
-                <div class="carousel-item <%= i === 0 ? 'active' : ''%>">
-                    <img src="<%= img.url %>" class="d-block w-100" alt="...">
+<section class="container-fluid px-0" id="css1">
+    <div class="row mt-3 row-cols-1 row-cols-sm-1 row-cols-md-2">
+        <div class="col">
+            <div id="campGroundControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <% campground.images.forEach((img, i) => { %>
+                    <div class="carousel-item <%= i === 0 ? 'active' : ''%>">
+                        <img src="<%= img.url %>" class="d-block w-100" alt="...">
+                    </div>
+                    <% }) %>
                 </div>
-                <% }) %>
-            </div>
-            <% if(campground.images.length > 1) { %>
-            <button class="carousel-control-prev" type="button" data-bs-target="#campGroundControls"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#campGroundControls"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-            <% } %>
-        </div>
-        <div class="card mb-3">
-            <div class="card-body">
-                <h5 class="card-title"><%= campground.title %></h5>
-                <p class="card-text"><%= campground.description %></p>
-            </div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item text-muted">&#x1f4cc; <%= campground.location %></li>
-                <li class="list-group-item">Camp Uploaded by <%= campground.uploader.username %></li>
-                <li class="list-group-item"><%= campground.price %>/Night</li>
-            </ul>
-            <% if(currentUser && campground.uploader.equals(currentUser._id)) {%>
-            <div class="card-body">
-                <a class="card-link btn btn-info" href="/campgrounds/<%=campground._id%>/edit">Edit</a>
-                <form class="d-inline" action="/campgrounds/<%=campground._id%>?_method=DELETE" method="POST">
-                    <button class="card-link btn btn-danger">Delete</button>
-                </form>
-            </div>
-            <% } %>
-            <div class="card-footer text-muted">
-                2 days ago
-            </div>
-        </div>
-
-    </div>
-    <div class="col-6 mt-3">
-      <div id='map'></div>
-        <% if(currentUser) { %>
-        <h2 class="mt-3">Leave a review</h2>
-        <form action="/campgrounds/<%= campground._id %>/reviews" method="POST" class="mb-3 validation-needed"
-            novalidate>
-            <div class="mb-0">
-                <label for="rating" class="form-label"><b>Rating:</b></label>
-                <fieldset class="starability-coinFlip">
-                    <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked
-                        aria-label="No rating." />
-                    <input type="radio" id="first-rate1" name="review[rating]" value="1" />
-                    <label for="first-rate1" title="Terrible">1 star</label>
-                    <input type="radio" id="first-rate2" name="review[rating]" value="2" />
-                    <label for="first-rate2" title="Not good">2 stars</label>
-                    <input type="radio" id="first-rate3" name="review[rating]" value="3" />
-                    <label for="first-rate3" title="Average">3 stars</label>
-                    <input type="radio" id="first-rate4" name="review[rating]" value="4" />
-                    <label for="first-rate4" title="Very good">4 stars</label>
-                    <input type="radio" id="first-rate5" name="review[rating]" value="5" />
-                    <label for="first-rate5" title="Amazing">5 stars</label>
-                </fieldset>
-            </div>
-            <div class="mb-1">
-                <label class="form-label" for="review"><b>Review</b></label>
-                <textarea class="form-control mb-2" name="review[body]" id="review" cols="30" rows="3"
-                    required></textarea>
-            </div>
-            <button class="btn btn-success">Submit</button>
-        </form>
-        <% } %>
-        <% for(let review of campground.reviews) { %>
-        <div class="card">
-            <div class="mb-3 card-body">
-                <h5 class="card-subtitle mb-2"><%= review.uploader.username %></h5>
-                <h5 class="card-title">
-                    <p class="starability-result" data-rating="<%= review.rating %>">
-                        <%= review.rating %>
-                    </p>
-                </h5>
-                <p class="card-text"><b>Review</b> <%= review.body %></p>
-                <% if(currentUser && review.uploader.equals(currentUser._id)) {%>
-                <form class="d-inline" action="/campgrounds/<%=campground._id%>/reviews/<%=review._id%>?_method=DELETE"
-                    method="POST">
-                    <button class="card-link btn btn-danger">Delete</button>
-                </form>
+                <% if(campground.images.length > 1) { %>
+                <button class="carousel-control-prev" type="button" data-bs-target="#campGroundControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#campGroundControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
                 <% } %>
             </div>
+            <div class="card mb-3">
+                <div class="card-body">
+                    <h5 class="card-title" id="css2"><%= campground.title %></h5>
+                    <p class="card-text"><%= campground.description %></p>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item text-muted">&#x1f4cc; <%= campground.location %></li>
+                    <li class="list-group-item">Camp Uploaded by <%= campground.uploader.username %></li>
+                    <li class="list-group-item"><%= campground.price %>/Night</li>
+                </ul>
+                <% if(currentUser && campground.uploader.equals(currentUser._id)) {%>
+                <div class="card-body">
+                    <a class="btn btn-sm btn-info" href="/campgrounds/<%=campground._id%>/edit">Edit</a>
+                    <form class="d-inline" action="/campgrounds/<%=campground._id%>?_method=DELETE" method="POST">
+                        <button class="btn btn-sm btn-danger">Delete</button>
+                    </form>
+                </div>
+                <% } %>
+                <div class="card-footer text-muted">
+                    2 days ago
+                </div>
+            </div>
+
         </div>
-        <% } %>
+        <div class="col mt-3">
+            <div id='map' id="css5"></div>
+            <% if(currentUser) { %>
+            <h2 class="mt-3">Leave a review</h2>
+            <form action="/campgrounds/<%= campground._id %>/reviews" method="POST" class="mb-3 validation-needed"
+                novalidate>
+                <div class="mb-0">
+                    <label for="rating" class="form-label"><b>Rating:</b></label>
+                    <fieldset class="starability-coinFlip" style="min-height: 40px;">
+                        <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked
+                            aria-label="No rating." />
+                        <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+                        <label for="first-rate1" title="Terrible">1 star</label>
+                        <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+                        <label for="first-rate2" title="Not good">2 stars</label>
+                        <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+                        <label for="first-rate3" title="Average">3 stars</label>
+                        <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+                        <label for="first-rate4" title="Very good">4 stars</label>
+                        <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+                        <label for="first-rate5" title="Amazing">5 stars</label>
+                    </fieldset>
+                </div>
+                <div class="mb-1">
+                    <label class="form-label" for="review"><b>Review</b></label>
+                    <textarea class="form-control mb-2" name="review[body]" id="review" cols="30" rows="3"
+                        required></textarea>
+                </div>
+                <button class="btn btn-sm btn-success">Submit</button>
+            </form>
+            <% } %>
+            <% for(let review of campground.reviews) { %>
+            <div class="mb-3 card">
+                <div class="card-body">
+                    <h5 class="card-subtitle mb-2" id="css4"><%= review.uploader.username %></h5>
+                    <h5 class="card-title mb-0">
+                        <p class="starability-result" data-rating="<%= review.rating %>">
+                            <%= review.rating %>
+                        </p>
+                    </h5>
+                    <p class="card-text"><b>Review</b> <%= review.body %></p>
+                    <% if(currentUser && review.uploader.equals(currentUser._id)) {%>
+                    <form class="d-inline"
+                        action="/campgrounds/<%=campground._id%>/reviews/<%=review._id%>?_method=DELETE" method="POST">
+                        <button class="card-link btn btn-sm btn-danger">Delete</button>
+                    </form>
+                    <% } %>
+                </div>
+            </div>
+            <% } %>
+        </div>
     </div>
-</div>
+</section>
 
 <script>
     const accessToken = '<%- process.env.MAPBOX_TOKEN %>';
